src/components/SortDropdown/SortDropdown.module.less
.sortDropdownWrapper {
  position: relative;
}

.dropdown {
  background: var(--bg-primary);
  border: var(--border-primary);

  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 16px;
  gap: 16px;

  position: absolute;
  top: 45px;
  right: 0;
  z-index: 4;

  @media screen and (max-width: 960px) {
    border: 0;
    border-top: var(--border-primary);
    padding: 24px;

    position: fixed;
    top: unset;
    left: 0;
    bottom: 0;
    width: 100%;
  }

  @media screen and (max-width: 640px) {
    padding: 16px;
    gap: 8px;
  }
}

.dropdownButton {
  display: flex;
  align-items: center;
  justify-content: space-between;
  min-width: 200px;
  width: 100%;

  @media screen and (max-width: 640px) {
    min-width: 180px;
  }
}
.dropdownButtonText {
  display: flex;
  align-items: center;
  white-space: nowrap;
}

.dropdownButton,
.sortButton {
  svg > path {
    fill: var(--content-primary);
  }

  @media screen and (max-width: 640px) {
    svg {
      height: 18px;
      width: 18px;
    }
  }
}

.sortButtons {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  width: 100%;
}

.sortButton {
  border-color: var(--bg-border);
  display: flex;
  align-items: center;
  white-space: nowrap;
}

.sortButton.active {
  background-color: var(--accent-primary);
  border-color: transparent;
  color: var(--pure-black);
  pointer-events: none;

  svg path {
    fill: var(--pure-black);
  }
}

.rotate {
  transform: rotate(180deg);
}

